--- a/styles/style.scss
+++ b/styles/style.scss
@@ -28,7 +28,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .github-link {
@@ -107,7 +107,7 @@ body {
         position: absolute;
         align-self: center;
         transition: 0.7s;
-        animation: fadeIn 1s ease-in forwards;
+        animation: fadeIn 1s ease-in;
     }
     .bread {
         height: auto;
@@ -166,7 +166,7 @@ body {
         bottom: 7px;
         &:hover {
             transform: rotate(35deg);
-            width: 205px;
+            width: 190px;
         }
     }
 }
